--- a/src/components/SearchFood/searchfood.module.sass
+++ b/src/components/SearchFood/searchfood.module.sass
@@ -4,10 +4,24 @@
   display: flex
   width: 100%
   justify-content: center
+  position: relative
+  z-index: 20
+
+  .searchIcon
+    display: block
+    position: absolute
+    top: 10px
+    left: 10px 
+    width: 30px
+    height: 30px
+    fill: $blue
+    color: $blue
+    z-index: 25
 
   input 
     width: 100%
-    height: 60px
+    height: 50px
+    padding-left: 50px
     border-radius: 15px
     background: $white
     color: $gray
@@ -22,8 +36,3 @@
     &:focus
       outline: none
       border: none
-
-    .search-icon 
-      width: 20px
-      height: 20px
-      color: $blue
