finished styles for homepage

--- a/src/components/SearchFood/searchfood.module.sass
+++ b/src/components/SearchFood/searchfood.module.sass
@@ -7,6 +7,16 @@
   position: relative
   z-index: 20
 
+  form 
+    display: flex
+    justify-content: center
+    position: relative
+    width: 60%
+
+    @media screen and (max-width: 768px)
+      position: relative
+      width: 90%
+
   .searchIcon
     display: block
     position: absolute
