--- a/src/pages/styles/home.module.sass
+++ b/src/pages/styles/home.module.sass
@@ -4,9 +4,11 @@
     display: flex
     justify-content: center
     align-items: center
+    flex-direction: column
     width: 100%
     height: 100vh
     background: rgba(0, 0, 0, 0.2)
+    position: relative
     
 .overlay
     position: absolute
@@ -17,3 +19,81 @@
     z-index: 10
     background-image: url("tempbg.jpg")
     filter: blur(1px)
+
+.heading
+    position: absolute
+    top: 10%
+    left: 50%
+    transform: translate(-50%, 50%)
+    z-index: 25
+    text-align: center
+    display: flex
+    flex-direction: column
+    align-items: center
+
+    @media screen and(max-width: 960px)
+        top: 0
+
+    h1
+        margin: 0
+        font-size: 4rem
+        font-weight: 900
+        color: $dwhite
+        text-shadow: 2px 2px 2px rgba(0,0,0,0.2)
+
+        @media screen and(max-width: 520px)
+            font-size: 3rem
+    p
+        margin: 0
+        font-size: 1rem
+        font-weight: 500
+        color: $dwhite
+        text-shadow: 2px 2px 2px rgba(0,0,0,0.2)
+        max-width: 340px
+
+
+.footer 
+    z-index: 25
+    position: absolute
+    margin: 0
+    font-size: 1rem
+    font-weight: 500
+    bottom: 1.5rem
+    left: 50%
+    transform: translate(-50%, 50%)
+    color: $dwhite
+    text-shadow: 3px 3px 4px rgba(0,0,0,0.5)
+    text-align: center
+
+    a
+        text-decoration: none
+        color: $blue
+
+        &:hover
+            transition: 0.3s color ease-in
+            color: $lightblue
+
+.navbar 
+    z-index: 25
+    position: absolute
+    top: 1rem
+    left: 1rem
+
+    .navLink 
+        display: flex
+        align-items: center
+
+        .navIcon
+            width: 40px
+            height: 35px
+            color: $blue
+
+        a 
+            color: $white
+            margin-left: .5rem
+            text-decoration: none
+            font-size: 2rem
+            font-weight: 600
+            text-shadow: 2px 2px 2px rgba(0,0,0,0.3)
+            
+
