--- a/src/pages/styles/home.module.sass
+++ b/src/pages/styles/home.module.sass
@@ -39,7 +39,7 @@
         font-size: 4rem
         font-weight: 900
         color: $dwhite
-        text-shadow: 2px 2px 2px rgba(0,0,0,0.2)
+        text-shadow: 2px 2px 2px rgba(0,0,0,0.3)
 
         @media screen and(max-width: 520px)
             font-size: 3rem
@@ -48,7 +48,7 @@
         font-size: 1rem
         font-weight: 500
         color: $dwhite
-        text-shadow: 2px 2px 2px rgba(0,0,0,0.2)
+        text-shadow: 2px 2px 2px rgba(0,0,0,0.3)
         max-width: 340px
 
 
@@ -62,7 +62,7 @@
     left: 50%
     transform: translate(-50%, 50%)
     color: $dwhite
-    text-shadow: 3px 3px 4px rgba(0,0,0,0.5)
+    text-shadow: 3px 3px 4px rgba(0,0,0,0.8)
     text-align: center
 
     a
@@ -88,6 +88,10 @@
             height: 35px
             color: $blue
 
+            @media screen and (max-width: 768px)
+                width: 35px
+                height: 25px
+
         a 
             color: $white
             margin-left: .5rem
@@ -95,5 +99,8 @@
             font-size: 2rem
             font-weight: 600
             text-shadow: 2px 2px 2px rgba(0,0,0,0.3)
+
+            @media screen and (max-width: 768px)
+                font-size: 1.5rem
             
 
