changes to searched results page

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,8 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap")
+@import "./variables"
 
 body 
   margin: 0
   font-family: Montserrat, sans-serif
 
 *
-  font-family: Montserrat, sans-serif  
+  font-family: Montserrat, sans-serif
+  box-sizing: border-box
+
+.template1
+  border-top: $blue 25px solid
+  border-left: $blue 25px solid
+  border-right: $lightblue 25px solid
+  border-bottom: $red 25px solid 
+
+.template2
+  border-top: $lightblue 25px solid
+  border-left: $lightblue 25px solid
+  border-right: $blue 25px solid
+  border-bottom: $red 25px solid
+
+.template3
+  border-top: $red 25px solid
+  border-left: $red 25px solid
+  border-right: $blue 25px solid
+  border-bottom: $lightblue 25px solid
