fixed responsivness issue & added back to homepage functionality

--- a/src/pages/styles/home.module.sass
+++ b/src/pages/styles/home.module.sass
@@ -31,7 +31,7 @@
     flex-direction: column
     align-items: center
 
-    @media screen and(max-width: 960px)
+    @media (max-width: 960px)
         top: 0
 
     h1
