--- a/src/pages/styles/searchresults.module.sass
+++ b/src/pages/styles/searchresults.module.sass
@@ -11,7 +11,27 @@
     position: relative
     z-index: 20
     padding: 0 4rem
+
+    @media (max-width: 1280px)
+        height: 150vh !important
     
+    .backToHomepage
+        position: absolute
+        display: flex
+        align-items: center
+        top: 2rem
+        left: 3rem
+        color: $white
+        cursor: pointer
+        font-size: 1.5rem
+
+        .arrow
+            margin-right: 4px
+
+        &:hover
+            transition: 0.3s color ease-in
+            color: $blue
+
 .overlay
     position: absolute
     top: 0
@@ -22,12 +42,19 @@
     background-image: url("tempbg.jpg")
     filter: blur(2px)
 
+    @media (max-width: 1280px)
+        height: 150vh !important
+
 
 .container
     display: grid
     grid-template-columns: .4fr 1fr
     gap: 0 50px
     width: 100%
+
+    @media (max-width: 1280px)
+        grid-template-columns: 1fr
+        gap: 20px 50px
 
     .heading 
         text-align: center
@@ -46,12 +73,17 @@
         .center
             display: flex
             justify-content: center
+            align-items: center
+            width: 100%
+            height: 100%
 
-        .graph
-            width: 250px
-            height: 250px
-            border-radius: 50%
-            margin-top: 2rem
+            .graph
+                width: 100% !important
+                height: 100% !important
+
+                @media (max-width: 1280px)
+                    width: 420px !important
+                    height: 420px !important
 
         .graphList
             display: flex
